force-app/main/default/objects/Apttus_Config2__ProductHierarchyView__c/Apttus_Config2__ProductHierarchyView__c.object-meta.xml
<CustomObject>
    <description>Represents a denormalized (materialized) view of product and classification hierarchies</description>
    <label>Product Hierarchy View</label>
    <nameField>
        <displayFormat>PV-{0000000000}</displayFormat>
        <label>View Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Hierarchy Views</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>