force-app/main/default/objects/Apttus_Config2__ProductHierarchyView__c/fields/Apttus_Config2__ChildClassificationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ChildClassificationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the child category</description>
    <label>Child Category</label>
    <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
    <relationshipLabel>Hierarchy View (Child)</relationshipLabel>
    <relationshipName>HierarchyView2</relationshipName>
    <type>Lookup</type>
</CustomField>