force-app/main/default/objects/Apttus_Config2__ProductHierarchyView__c/fields/Apttus_Config2__ChildLabel__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ChildLabel__c</fullName>
    <description>The child category label</description>
    <formula>Apttus_Config2__ChildClassificationId__r.Apttus_Config2__Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Label</label>
    <type>Text</type>
</CustomField>