force-app/main/default/objects/Apttus_Config2__ProductHierarchyView__c/fields/Apttus_Config2__ParentLabel__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ParentLabel__c</fullName>
    <description>The parent category label</description>
    <formula>Apttus_Config2__ParentClassificationId__r.Apttus_Config2__Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Label</label>
    <type>Text</type>
</CustomField>