force-app/main/default/objects/Apttus_Config2__ProductHierarchyView__c/fields/Apttus_Config2__ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductFamily__c</fullName>
    <description>The product family</description>
    <formula>TEXT(Apttus_Config2__ChildProductId__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>