force-app/main/default/objects/Apttus_Config2__ProductHierarchyView__c/fields/Apttus_Config2__RelationshipType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelationshipType__c</fullName>
    <description>The relationship type</description>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Root Node</fullName>
            </value>
            <value>
                <fullName>Classification Node</fullName>
            </value>
            <value>
                <fullName>Product Node</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>